fix: style for radio buttons - alignment

--- a/static/style.css
+++ b/static/style.css
@@ -98,6 +98,7 @@ input[type="text"] {
 }
 .type-radio {
   display: flex;
+  align-items: center;
   margin-right: 2em;
 }
 
